--- a/tabs/adminlogin.html
+++ b/tabs/adminlogin.html
@@ -59,7 +59,7 @@
                 else {
                     localStorage.setItem('AdminID', data.id)
                     console.log(data['functions'])
-                    // window.location.href = "/adminpage"
+                    window.location.href = "/adminpage"
                 }
             })
 
