added delete from previous table

--- a/tabs/adminhome.html
+++ b/tabs/adminhome.html
@@ -570,7 +570,7 @@
             // console.log("press add",temp)
             temp = JSON.stringify(temp)
             $.get('http://localhost:4240/api/send?data='+temp, function (data) {
-            console.log(data['data'])
+            console.log(data)
         })  
         }
     </script>
